2004-12-09  Francois Dumont  <dums@stlport...>

	* stlport/stl/_messages_facets.h: fixed messages_base::catalog from long typedef
	to int thanks Ulrich Eckhardt report.
	
	* stlport/stl_user_config.h, config/stl_msvc.h: addition of the _STLP_VERBOSE_AUTO_LINK 
	config macro to make the automatic linking feature more verbose thanks Ulrich Eckhardt
	patch.
	
	* stlport/exception: Add check of the _STLP_HAS_SPECIFIC_PROLOG_EPILOG macro before
	including _msvc_warning_off.h to avoid bad resulting warning status when the _epilog.h
	header is not included thanks Gail (baker88) report.
	
	* stlport/cassert, cerrno, csignal, ctype.h, cwctype, stdarg.h, stdlib.h, string.h,
	config/stl_evc.h: Patch from Michael Fink to fix compilation problem using ressource
	compiler for evc3 and evc4 and problems with cerrno and cassert inclusions reported
	by Ulrich Eckhardt.

2004-12-01  Petr Ovtchenkov  <ptr@island...>

	* stlport/stdexcept: removes some warnings regarding the exception class being derived
	from a non-dll interface class on evc4. Michael Fink contribution.

	* stlport/stl/_cmath.h: push/pop warning level for VCs. Michael Fink contribution.

	* src/_stdio_file.h: Evc4 uses an ugly hack to implement file IO using a FILECE structure
	representing the internal FILE structure. For evc3 Michael Fink implemented a much simpler
	way that also works for evc4.

	* stlport/config/stl_evc.h, stl_msvc.h, stlcomp.h: separate config stuff for stl_evc.h
	and stl_msvc.h. Now all Windows CE specific defines are in stl_evc.h only.
	Michael Fink contribution.

	* stlport/stl/_codecvt.h, _ctype.h, _messages_facets.h, _monetary.h: add friend class
	_Locale_impl.

	* stlport/stl/_num_get.h, _num_put.h, _numpunct.h, _time_facets.h: ditto.



2004-11-30  Petr Ovtchenkov  <ptr@island...>

	* src/explore/configure.bat: added quotes. Thanks Ulrich Eckhardt and Michael Fink.

	* stlport/stl/_locale.h, src/locale_impl.h, src/locale_impl.cpp: added _STLP_DECLSPEC