@@ -98,7 +98,11 @@ class _STLP_CLASS_DECLSPEC _Locale_impl :
     friend _Locale_impl * _STLP_CALL _copy_Locale_impl( _Locale_impl * );
     friend _Locale_impl * _STLP_CALL _copy_Nameless_Locale_impl( _Locale_impl * );
     friend void _STLP_CALL _release_Locale_impl( _Locale_impl *& loc );
+#if defined (_STLP_USE_MSVC6_MEM_T_BUG_WORKAROUND)
+    friend class _STLP_NO_MEM_T_NAME(loc);
+#else
     friend class locale;
+#endif
 };
 
 _STLP_DECLSPEC _Locale_impl * _STLP_CALL _get_Locale_impl( _Locale_impl *loc );
